--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,6 @@
 <h2> This is a difficult class and I like to watch anime! :D </h2>
 <b/>
 <a href="{% url 'home' %}">Turn Home</a>
+
+
+Copyright 2020
